# playground

./: .gitattributes  .gitignore  README.md
99-problems/ruby/: 6.rb  7.rb  9.rb
Deep-Reinforcement-Learning-Hands-On-Third-Edition-Rust/: Cargo.toml  README.md  requirements.txt
Deep-Reinforcement-Learning-Hands-On-Third-Edition-Rust/src/: lib.rs
PCI_code/ch02/: recommendations.py
PCI_code/ch03/: blogdata.txt
PCI_code/ch04/: nn.sql  searchengine.py  searchengine_test.py
PCI_code/ch05/: optimization.py  (+1 more)
bootstrap-examples/: code.html  datepicker.html  dropdown.html  form.html  glyphicons.html  grid.html  helper-classes.html  navbar.html  typesetting.html
julia/: horsengoggle.jl
leetcode/: build.gradle
linear-algbra/: Untitled.ipynb
neural-network-and-deep-learning/: ch01.ipynb  ch03.ipynb  ch05.ipynb  mnist_loader.py  mnist_svm.py  network.py  network2.py  test.ipynb  test_sagemath.ipynb
neural-network-from-scratch/jieba_tokenizer_py/: Cargo.toml  README.md  pyproject.toml  simple.json  test.txt
neural-network-from-scratch/jieba_tokenizer_py/src/: lib.rs
qubit/: bloch_sphere.ipynb  requirements.txt
reinforcement-learning-an-introduction/: gambler.py
ricex-signals-and-systems/: common.jl  freq_week2.ipynb  freq_week3.ipynb  signal_processing.ipynb  test_julia.ipynb  week1.ipynb
thinkstats/: analytic.py  ch01_exploratory_data_analysis.ipynb  ch03_probability.ipynb  ch04_cdf.ipynb  nsfg.py  populations.py  utils.py
usaco/: .gitignore  template.c  template.cpp  template.java
yjango/: XOR_class_example.ipynb  XOR_example.ipynb
(+487 files in other folders)
